--- a/06-node/movie_search_app/package.json
+++ b/06-node/movie_search_app/package.json
@@ -12,5 +12,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.0"
   }
 }
